__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>May 23, 2007</dt>
<dd>Version 2.9.12 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.12 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `May', `002949')</dd>
<dt>May 22, 2007</dt>
<dd>Version 2.9.11 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.11 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `May', `002932')</dd>
<dt>March 27, 2007</dt>
<dd>Version 2.9.10 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2007', `March', `002372')</dd>
<dt>March 1, 2007</dt>
<dd>Thanks to Bob Weigel and Nabble, it is now possible to
__HTTP__(`www.nabble.com/Octave-f1895.html', `search') the
contents of the Octave mailing lists all the way back to the beginning
of time (around 1992).</dd>
<dt>December 7, 2006</dt>
<dd>A new graphics branch of the code is now in the works to keep all
graphics data in Octave to improve compatibility with Matlab and
facilitate newer graphics back-ends.
__MAIL_THREAD__(`maintainers', `2006', `December', `001435')</dd>
<dt>October 2, 2006</dt>
<dd>Version 2.9.9 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `October', `000743')</dd>
<dt>August 24, 2006</dt>
<dd>Version 2.9.8 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `August', `000500')</dd>
<dt>July 28, 2006</dt>
<dd>Version 2.9.7 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `July', `000431')</dd>