@@ -45,6 +45,15 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>July 25, 2007</dt>
+<dd>Version 2.9.12 is now available for ftp and is the new
+"testing" (also "recommended") version.  As noted on the download
+page, 2.9.13 is a pre-release version of Octave 3.0.  It is
+significantly different from Octave 2.1.x, particularly with regard to
+graphics, path handling, and built-in variables.  Please read the
+<a href="NEWS-3.html">NEWS</a> file.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-July/003572.html"
+class="mailthread">[Mailing List Thread]</a></dd>
 <dt>May 23, 2007</dt>
 <dd>Version 2.9.12 is now available for ftp and is the new
 "testing" (also "recommended") version.  As noted on the download
@@ -72,61 +81,6 @@ class="mailthread">[Mailing List Thread]</a></dd>
 <a href="http://www.nabble.com/Octave-f1895.html">search</a> the contents of
 the Octave mailing lists all the way back to the beginning of time
 (around 1992).</dd> 
-<dt>December 7, 2006</dt>
-<dd>A new graphics branch of the code is now in the works to keep all
-graphics data in Octave to improve compatibility with Matlab and
-facilitate newer graphics back-ends.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-December/001435.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>October 2, 2006</dt>
-<dd>Version 2.9.9 is now available for ftp.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-October/000743.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>August 24, 2006</dt>
-<dd>Version 2.9.8 is now available for ftp.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-August/000500.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>July 28, 2006</dt>
-<dd>Version 2.9.7 is now available for ftp.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-July/000431.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>July 27, 2006</dt>
-<dd>Fairly complete support for Matlab's MEX interface has been
-added to the Octave CVS archive and will be part of the 2.9.7
-shapshot.  Please see
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-July/000424.html"
-class="mailthread">[Mailing List Thread]</a>
-for more details.</dd>
-<dt>June 29, 2006</dt>
-<dd>Please see this
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-June/000309.html"
-class="mailthread">[Mailing List Thread]</a>
-if you are having trouble compiling Octave 2.9.6 with GCC 3.x.  After
-applying the patch, you'll need to run autogen.sh and configure
-again.  This means you'll need to have a recent version of autoconf
-installed.  Or, you can upgrade to GCC 4.x or you can wait for
-2.9.7.  So many options!</dd>
-<dt>June 9, 2006</dt>
-<dd>Version 2.9.6 is now available for ftp.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-June/000281.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>May 26, 2006</dt>
-<dd>Function file cacheing has been improved with hopefully major 
-speedups when calling m-file functions.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-May/000230.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>May 21, 2006</dt>
-<dd>Octave-forge is being cleaned up by moving core functions into
-the main Octave distribution.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-May/000195.html"
-class="mailthread">[Mailing List Thread]</a></dd>
-<dt>May 11, 2006</dt>
-<dd>Path manipulation was significantly cleaned up.  Now instead of
-manipulating the <code>LOADPATH</code> variable, you can use the
-<code>addpath</code>, <code>rmpath</code>, and <code>path</code>
-functions.
-<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-May/000147.html"
-class="mailthread">[Mailing List Thread]</a></dd>
 </dl>
 
 <p>For older news, see the
